--- a/html-source/index.html
+++ b/html-source/index.html
@@ -9,22 +9,11 @@
     <title>My fabulous page></title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
+          rel="stylesheet">
+    <link href="https://unpkg.com/notie/dist/notie.min.css" rel="stylesheet" type="text/css">
+    <link href="static/css/styles.css" rel="stylesheet" type="text/css">
 
-    <style>
-        .my-footer {
-            height: 5em;
-            background-color: #492e1b;
-            margin-top: 1.3em;
-            padding: 1em;
-            color: #FFFFFF;
-            font-size: 80%;
-
-        }
-
-        p {
-        }
-
-    </style>
 
 </head>
 
@@ -148,19 +137,20 @@
 
     </div>
 
-    <div class="row my-footer">
-        <div class="col">
-            Left
-        </div>
 
-        <div class="col">
-            Middle
-        </div>
+</div>
 
-        <div class="col">
-            Right
-        </div>
+<div class="row my-footer">
+    <div class="col">
+        Left
+    </div>
 
+    <div class="col">
+        Middle
+    </div>
+
+    <div class="col">
+        Right
     </div>
 
 </div>
