--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -9,26 +9,11 @@
     <title>My fabulous page></title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
+          rel="stylesheet">
+    <link href="https://unpkg.com/notie/dist/notie.min.css" rel="stylesheet" type="text/css">
+    <link href="static/css/styles.css" rel="stylesheet" type="text/css">
 
-    <style>
-        .my-footer {
-            height: 5em;
-            background-color: #492e1b;
-            margin-top: 1.3em;
-            padding: 1em;
-            color: #FFFFFF;
-            font-size: 80%;
-
-        }
-
-        .room-image {
-            max-width: 50%;
-        }
-
-        p {
-        }
-
-    </style>
 
 </head>
 
