--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
           rel="stylesheet">
     <link href="https://unpkg.com/notie/dist/notie.min.css" rel="stylesheet" type="text/css">
-    <link href="static/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/styles.css" rel="stylesheet" type="text/css">
 
 
 </head>
