--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
           rel="stylesheet">
     <link href="https://unpkg.com/notie/dist/notie.min.css" rel="stylesheet" type="text/css">
-    <link href="static/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/styles.css" rel="stylesheet" type="text/css">
 
     <style>
 
@@ -105,15 +105,6 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col">
-            <p id="myParagraph">This is some text.</p>
-
-            <p>
-                <button class="btn btn-outline-secondary" id="colorButton">Click me</button>
-            </p>
-        </div>
-    </div>
 
 </div>
 
@@ -193,7 +184,7 @@
         </form>
         `
 
-        attention.custom({msg: html, title: "Choose your dates"});
+
     })
 
     const elem = document.getElementById('reservation-dates');
